--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <button class="xButton">X</button>
             <button class="oButton">O</button>
         </div>
+        <div class="turn">1</div>
+        <div class="results"></div>
     </div>
     <script src="scripts.js"></script>
 </body>
