Add difficulties to tictactoe and option to play against human or ai

--- a/index.html
+++ b/index.html
@@ -12,8 +12,20 @@
         <div class="gameBoard">
         </div>
         <div class="buttons">
-            <button class="xButton">X</button>
-            <button class="oButton">O</button>
+            <div class="modeSelect">
+                <button class="pvp">Player vs Player</button>
+                <button class="pvc">Player vs Computer</button>
+            </div>
+            <div class="difficultySelect">
+                <button class="easy">Easy</button>
+                <button class="medium">Medium</button>
+                <button class="hard">Hard</button>
+                <button class="impossible">Impossible</button>
+            </div>
+            <div class="markerSelect">
+                <button class="xButton">X</button>
+                <button class="oButton">O</button>
+            </div>
         </div>
         <div class="results"></div>
     </div>
