--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </div>
         </div>
         <div class="results"></div>
+        <button class="reset">RESET</button>
     </div>
     <script src="scripts.js"></script>
 </body>
